--- a/RCFG/.gitignore
+++ b/RCFG/.gitignore
@@ -59,3 +59,9 @@ sysinfo.txt
 crashlytics-build.properties
 
 ProjectVersion.txt
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
